# YDChat

./: COMMERCIALIZATION.md  LICENSE  README.md  chat_excel_bot.ps1  pyproject.toml  train_excel_bot.ps1
artifacts/tokenizer/: ydchat_excel.model  ydchat_excel.vocab
configs/: excel_smoke.yaml  medium_template.yaml  small.yaml  tiny.yaml
data/processed/: qa_pretrain.jsonl  qa_pretrain_train.jsonl  qa_pretrain_val.jsonl  qa_sft.jsonl  qa_sft_train.jsonl  qa_sft_val.jsonl
src/ydchat/: __init__.py  config.py
src/ydchat.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ydchat/data/: __init__.py  packer.py  sft_dataset.py  stream_dataset.py
src/ydchat/infer/: __init__.py  chat_cli.py  generate.py  server.py
src/ydchat/model/: __init__.py  attention.py  block.py  embeddings.py  mlp.py  model.py  rotary.py
src/ydchat/scripts/: quickstart_tiny.ps1  quickstart_tiny.sh  serve.sh
src/ydchat/tokenizer/: __init__.py  tokenizer.py  train_tokenizer.py
src/ydchat/train/: __init__.py  checkpoints.py  log.py  optim.py  pretrain.py  sched.py  sft.py
tests/: test_forward.py  test_generate.py  test_tokenizer.py
